--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -5,30 +5,54 @@
         <div class="row">
             <div class="col">
                 <h1 class="mt-3">Make Reservation</h1>
-                <form method="post" action="" class="needs-validation" novalidate>
+
+                <p><strong>Reservation Details</strong><br>
+                    Arrival: {{index .StringMap "start_date"}}
+                    Departure: {{index .StringMap "end_date"}}
+                </p>
+
+                {{$res := index .Data "reservation"}}
+
+                <form method="post" action="/make-reservation" class="" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
-                        <input class="form-control"
+                        {{with .Form.Errors.Get "first_name"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}"
                                id="first_name" autocomplete="off" type='text'
-                               name='first_name' value="" required>
+                               name='first_name' value="{{$res.FirstName}}" required>
                     </div>
                     <div class="form-group">
                         <label for="last_name">Last Name:</label>
-                        <input class="form-control"
+                        {{with .Form.Errors.Get "last_name"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}"
                                id="last_name" autocomplete="off" type='text'
-                               name='last_name' value="" required>
-                    </div>
+                               name='last_name' value="{{$res.LastName}}" required>
+                    </div>           
+                    <input type="hidden" name="room_id" value="1">
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input class="form-control" id="email"
+                        {{with .Form.Errors.Get "email"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}" id="email"
                                autocomplete="off" type='email'
-                               name='email' value="" required>
+                               name='email' value="{{$res.Email}}" required>
                     </div>
                     <div class="form-group">
                         <label for="phone">Phone:</label>
-                        <input class="form-control" id="phone"
+                        {{with .Form.Errors.Get "phone"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}" id="phone"
                                autocomplete="off" type='email'
-                               name='phone' value="" required>
+                               name='phone' value="{{$res.Phone}}" required>
                     </div>
                     <hr>
                     <input type="submit" class="btn btn-primary" value="Make Reservation">
