--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -7,7 +7,8 @@
                 <h1 class="mt-3">Make Reservation</h1>
 
                 <p><strong>Reservation Details</strong><br>
-                    Arrival: {{index .StringMap "start_date"}}
+                    
+                    Arrival: {{index .StringMap "start_date"}}<br>
                     Departure: {{index .StringMap "end_date"}}
                 </p>
 
@@ -17,6 +18,8 @@
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
                     <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}">
+
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
                         {{with .Form.Errors.Get "first_name"}}
